--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,7 +100,7 @@ jobs:
         username: ${{ matrix.server.username }}
         key: ${{ secrets.SSH_KEY }}
         port: ${{ matrix.server.port }}
-        envs: envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH
+        envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH
         script: |
           ${{ matrix.server.beforeHooks }}
   activate-release:
