--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
+        "laravel/framework": "^10.15.0",
+        "laravel/sanctum": "^3.2.5",
         "laravel/tinker": "^2.7",
-        "laravellegends/pt-br-validator": "^9.1"
+        "laravellegends/pt-br-validator": "^10.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
@@ -18,9 +18,9 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.7.0",
+        "phpunit/phpunit": "^10.2.6",
+        "spatie/laravel-ignition": "^2.2.0"
     },
     "autoload": {
         "psr-4": {
@@ -62,6 +62,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
